// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiAnyTransaction shows bank transactions 1`] = `
<div>
  <div>
    <libanktransaction-stub
      address="cosmos1address"
      block="3436"
      bondingdenom="atom"
      fees="[object Object]"
      memo="TESTING (Sent via Lunie)"
      time="1970-01-01T00:00:02.042Z"
      tx="[object Object]"
    />
  </div>
</div>
`;

exports[`LiAnyTransaction shows distribution transaction with multiple msgs 1`] = `
<div>
  <div>
    <lidistributiontransaction-stub
      block="1114"
      bondingdenom="atom"
      fees="[object Object]"
      memo="TESTING (Sent via Lunie)"
      time="1970-01-01T00:00:43.300Z"
      tx="[object Object]"
      txtype="cosmos-sdk/MsgWithdrawDelegationReward"
      url="/validators"
      validators="[object Object],[object Object]"
    />
  </div>
  <div>
    <lidistributiontransaction-stub
      block="1114"
      bondingdenom="atom"
      fees="[object Object]"
      memo="TESTING (Sent via Lunie)"
      time="1970-01-01T00:00:43.300Z"
      tx="[object Object]"
      txtype="cosmos-sdk/MsgWithdrawDelegationReward"
      url="/validators"
      validators="[object Object],[object Object]"
    />
  </div>
</div>
`;

exports[`LiAnyTransaction shows governance transactions 1`] = `
<div>
  <div>
    <ligovtransaction-stub
      block="56673"
      bondingdenom="atom"
      fees="[object Object]"
      memo="TESTING (Sent via Lunie)"
      time="1970-01-01T00:00:42.540Z"
      tx="[object Object]"
      txtype="cosmos-sdk/MsgSubmitProposal"
    />
  </div>
</div>
`;

exports[`LiAnyTransaction shows staking transactions 1`] = `
<div>
  <div>
    <listaketransaction-stub
      block="193281"
      bondingdenom="atom"
      fees="[object Object]"
      memo="TESTING (Sent via Lunie)"
      time="1970-01-01T00:00:02.042Z"
      tx="[object Object]"
      txtype="cosmos-sdk/MsgCreateValidator"
      url="/validators"
      validators="[object Object],[object Object]"
    />
  </div>
</div>
`;

exports[`LiAnyTransaction shows unknown type transactions 1`] = `
<div>
  <div>
    <litransaction-stub
      block="3436"
      color="grey"
      time="1970-01-01T00:00:02.042Z"
    >
      <span>
        Unknown Transaction Type
      </span>
    </litransaction-stub>
  </div>
</div>
`;
